Fix header z-index

--- a/style.css
+++ b/style.css
@@ -3687,7 +3687,7 @@ p > video {
 	.site-header {
 		width: 100%;
 		position: fixed;
-		z-index: 2;
+		z-index: 4;
 		width: calc(100% - 3.07%);
 		padding: 0 4.5455%;
 	}
